--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,14 +1,19 @@
 .gsc-control-cse {
-    background-color: transparent !important;
-    border-radius: 5rem !important;
+    /* background-color: !important; */
+    background-color: rgba(255, 255, 255, 0.1) !important;
+    -webkit-backdrop-filter: blur(5px) !important;
+    backdrop-filter: blur(5px) !important;
     padding: 0.5rem 0.8rem !important;
     transition: all 300ms !important;
     border: 1px solid gray !important;
+    border-radius: 5rem !important;
 
     &:focus {
         background-color: #272728 !important;
     }
 }
+
+
 
 .dark .gsc-control-cse {
     background-color: transparent !important;
@@ -48,15 +53,19 @@
 }
 
 .gsc-search-button .gsc-search-button-v2 {
-    background-color: #878788 !important;
+    background-color: #ffffff !important;
     padding: 1.3rem 1.8rem !important;
     border-radius: 2.5rem !important;
     border: none !important;
     transition: all 300ms !important;
 
     &:hover {
-        background-color: #272728 !important;
+        background-color: #d9d9da !important;
     }
+}
+
+.gsc-search-button .gsc-search-button-v2 svg {
+    fill: black !important;
 }
 
 .dark .gsc-search-button .gsc-search-button-v2 {
