--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,4 +1,4 @@
-.gsc-control-cse {
+#___gcse_0 {
     /* background-color: !important; */
     background-color: rgba(255, 255, 255, 0.1) !important;
     -webkit-backdrop-filter: blur(5px) !important;
@@ -7,6 +7,7 @@
     transition: all 300ms !important;
     border: 1px solid gray !important;
     border-radius: 5rem !important;
+
 
     &:focus {
         background-color: #272728 !important;
@@ -22,6 +23,8 @@
 
 }
 
+
+
 .dark .gsc-completion-container {
     background-color: #161D2C !important;
     color: white !important;
@@ -36,8 +39,8 @@
 }
 
 .gsc-input-box {
-    border-radius: 5rem !important;
-    background-color: white !important;
+    border-radius: 50px 0 0 50px !important;
+    background-color: rgb(252, 250, 250) !important;
     padding: 0.5rem 1rem !important;
     border: none !important;
 }
@@ -52,20 +55,30 @@
 
 }
 
+#gs_tti50 input {
+    background-color: rgb(252, 250, 250) !important;
+    color: black !important;
+
+}
+
 .gsc-search-button .gsc-search-button-v2 {
-    background-color: #ffffff !important;
-    padding: 1.3rem 1.8rem !important;
-    border-radius: 2.5rem !important;
+    background-color: rgb(252, 250, 250) !important;
+    padding: 18px 1.8rem !important;
+    border-radius: 0 50px 50px 0 !important;
     border: none !important;
     transition: all 300ms !important;
 
     &:hover {
-        background-color: #d9d9da !important;
+        background-color: #ffffff !important;
     }
 }
 
 .gsc-search-button .gsc-search-button-v2 svg {
     fill: black !important;
+}
+
+.dark .gsc-search-button .gsc-search-button-v2 svg {
+    fill: rgb(255, 255, 255) !important;
 }
 
 .dark .gsc-search-button .gsc-search-button-v2 {
@@ -74,4 +87,16 @@
     &:hover {
         background-color: #464D5C !important;
     }
+}
+
+.table.gsc-search-box td.gsc-input {
+    padding-right: 0px !important;
+}
+
+.gsc-control-searchbox-only {
+    margin-top: 3px !important;
+}
+
+.gsc-search-button {
+    margin-left: -12px !important;
 }
